--- a/BOT.ipynb
+++ b/BOT.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-30 21:26:26,520 (__init__.py:884 MainThread) ERROR - TeleBot: \"Infinity polling: polling exited\"\n",
-      "2022-09-30 21:26:26,525 (__init__.py:886 MainThread) ERROR - TeleBot: \"Break infinity polling\"\n"
+      "2022-09-30 23:08:22,840 (__init__.py:884 MainThread) ERROR - TeleBot: \"Infinity polling: polling exited\"\n",
+      "2022-09-30 23:08:22,845 (__init__.py:886 MainThread) ERROR - TeleBot: \"Break infinity polling\"\n"
      ]
     }
    ],
@@ -98,26 +98,31 @@
     "\tbot.send_photo(message.chat.id,open('Photo_stat.png','rb'))\n",
     "\tdatabase.del_photo()\n",
     "    \n",
-    "\n",
     "def water(message):\n",
-    "\tWater = list(map(float,re.findall(r'(\\d+[.]{1}\\d{3})\\s*',message.text)))\n",
-    "\tif len(Water)==2:\n",
-    "\t\tdatabase.add_firewather(Water[0])\n",
-    "\t\tdatabase.add_cullwather(Water[1])\n",
-    "\t\tbot.send_message(message.chat.id,f'Добывлено\\nГорячая вода: {Water[0]}\\nХолодная вода: {Water[1]}')\n",
-    "\telse:\n",
-    "\t\tmsg = bot.send_message(message.chat.id,'Проверьте правильность введенных данных и повторите ввод')\n",
-    "\t\tbot.register_next_step_handler(msg,water)\n",
+    "    Water = list(map(float,re.findall(r'(\\d+[.]{1}\\d{3})\\s*',message.text)))\n",
+    "    if len(Water)==2:\n",
+    "        database.add_firewather(Water[0])\n",
+    "        database.add_cullwather(Water[1])\n",
+    "        text = \"Добавлено\\nГорячая вода: {} \\nХолодная вода: {}\".format(Water[0],Water[1])\n",
+    "        bot.send_message(message.chat.id,text)\n",
+    "        bot.send_message(1323264913,text)\n",
+    "        bot.send_message(1974343691,text)\n",
+    "    else:\n",
+    "        msg = bot.send_message(message.chat.id,'Проверьте правильность введенных данных и повторите ввод')\n",
+    "        bot.register_next_step_handler(msg,water)\n",
     "\n",
     "def electricity(message):\n",
-    "\telectricity = list(map(float,re.findall(r'(\\d+[.]{1}\\d{2})\\s*',message.text)))\n",
-    "\tif len(electricity) == 2:\n",
-    "\t\tdatabase.add_tone(electricity[0])\n",
-    "\t\tdatabase.add_ttwo(electricity[1])\n",
-    "\t\tbot.send_message(message.chat.id,f'Добавлено:\\nT1: {electricity[0]}\\nT2: {electricity[1]}')\n",
-    "\telse:\n",
-    "\t\tmsg = bot.send_message(message.chat.id,'Проверьте правильность введенных данных и повторите ввод')\n",
-    "\t\tbot.register_next_step_handler(msg,electricity)\n",
+    "    electricity = list(map(float,re.findall(r'(\\d+[.]{1}\\d{2})\\s*',message.text)))\n",
+    "    if len(electricity) == 2:\n",
+    "        database.add_tone(electricity[0])\n",
+    "        database.add_ttwo(electricity[1])\n",
+    "        text = 'Добавлено:\\nT1: {}\\nT2: {electricity[1]}'.format(electricity[0],electricity[1])\n",
+    "        bot.send_message(message.chat.id,text)\n",
+    "        bot.send_message(1323264913,text)\n",
+    "        bot.send_message(1974343691,text)\n",
+    "    else:\n",
+    "        msg = bot.send_message(message.chat.id,'Проверьте правильность введенных данных и повторите ввод')\n",
+    "        bot.register_next_step_handler(msg,electricity)\n",
     "\n",
     "def create_markup(n=1,db = database.last_number):\n",
     "    markup = types.InlineKeyboardMarkup()\n",
